<resources>
    <string name="app_name">SE1</string>
    <string name="logo">logo</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="login">Login</string>
    <string name="give_and_help">give and help</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="register">Register?</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="todo">TODO</string>
    <string name="change_image">Change image?</string>
    <string name="post">POST</string>

    <string-array name="item_category">
        <item>Select item\'s category</item>
        <item>Home equipments</item>
        <item>Sports</item>
        <item>Computer</item>
        <item>Furniture</item>
        <item>Wearables</item>
        <item>Kitchen</item>
    </string-array>

</resources>